started adding photo details

--- a/philipe-cavalcante/index.html
+++ b/philipe-cavalcante/index.html
@@ -44,8 +44,7 @@
         </div>
         <div class="col-12 col-sm-6 col-md-9"> </div>
         <div class="card-columns">
-          <div class="card"> 
-			  <img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=300&q=60" alt="Woman, Female, Leaf, and Face.">          
+          <div class="card"> <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=300&q=60" alt="Woman, Female, Leaf, and Face."></a>          
 			</div>
 			<div class="card"> 
 			  <img class="card-img-top" src="https://images.unsplash.com/photo-1539910026384-9824f87bfe9b?auto=format&w=300&q=60" alt="The Explorer's Curiousity">          
