added modal box

--- a/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
+++ b/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
@@ -42,11 +42,32 @@
             </ul>
           </div>
         </div>
-        <div class="col-12 col sm-6 col-md-9"> <!-- InstanceBeginEditable name="atanas-malamov-content" -->
+        <div class="col-12 col sm-6 col-md-9"> <!-- InstanceBeginEditable name="atanas-malamov-content" --> 
+          <!-- Button trigger modal -->
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Photo Info </button>
           
-			<h2>Woman, Female, Leaf, and Face.</h2>
-			<p>I really enjoy this portrait of this woman in front of a tree. I like the colors of the photo.</p>
-			<div class="card"> <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=1200&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
+          <!-- Modal -->
+          <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Woman, Female, Leaf, and Face</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
+                </div>
+                <div class="modal-body"> 
+					[placeholder for modal stats]
+			    </div>
+                <div class="modal-footer">
+					<a href="https://unsplash.com/photos/ZaM4FioEJ6c" target="_blank">Photo Source</a>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  
+                </div>
+              </div>
+            </div>
+          </div>
+          <h2>Woman, Female, Leaf, and Face</h2>
+          <p>I really enjoy this portrait of this woman in front of a tree. I like the colors of the photo.</p>
+          <div class="card"> <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=1200&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
           <!-- InstanceEndEditable --> </div>
       </div>
       <p>[Footer]</p>
