added modal col

--- a/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
+++ b/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
@@ -5,7 +5,6 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- InstanceBeginEditable name="doctitle" -->
@@ -42,19 +41,43 @@
             </ul>
           </div>
         </div>
-        <div class="col-12 col sm-6 col-md-9"> <!-- InstanceBeginEditable name="atanas-malamov-content" -->
-          
-			<h2>Woman, Female, Leaf, and Face.</h2>
-			<p>I really enjoy this portrait of this woman in front of a tree. I like the colors of the photo.</p>
-			<div class="card"> <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=1200&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
-          <!-- InstanceEndEditable --> </div>
-      </div>
-      <p>[Footer]</p>
+        <div class="col-12 col sm-6 col-md-9">
+        <!-- InstanceBeginEditable name="atanas-malamov-content" -->
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Photo Info </button>
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Woman, Female, Leaf, and Face</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
+              </div>
+              <div class="modal-body"> 
+				  <div class="row"		 
+                <dl class="col-4">
+                  <dt>Term</dt>
+                  <dd>This is a description.</dd>
+                </dl>
+              </div>
+            </div>
+            <div class="modal-footer"> <a href="https://unsplash.com/photos/ZaM4FioEJ6c" target="_blank">Photo Source</a>
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+        </div>
+        <h2>Woman, Female, Leaf, and Face</h2>
+        <p>I really enjoy this portrait of this woman in front of a tree. I like the colors of the photo.</p>
+        <div class="card"> <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=1200&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
+        <!-- InstanceEndEditable --> </div>
     </div>
-    <!-- Optional JavaScript --> 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS --> 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> 
+    <p>[Footer]</p>
+    </div>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
   <!-- InstanceEnd -->
