more changes to modal

--- a/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
+++ b/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
@@ -54,16 +54,17 @@
                 </div>
         <div class="modal-body"> 					
 				[placeholder content]
-				 </div>
+			    </div>
     <div class="modal-footer">
-		<a href="https://unsplash.com/photos/ZaM4FioEJ6c" target="_blank">Photo Source</a>
+		<a href"https://unsplash.com/photos/ZaM4FioEJ6c" target="_blank">Photo Source</a>
 		<button type="button" class="btn btn-secondary" data dismiss="modal">Close</button>
               </div>
             </div>
           </div>
         <h2>Woman, Female, Leaf, and Face</h2>
           <p>I really enjoy this portrait of this woman in front of a tree. I like the colors of the photo.</p>
-          <div class="card"> <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=1200&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
+          <div class="card">
+			  <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=1200&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
           <!-- InstanceEndEditable --> </div>
       </div>
       <p>[Footer]</p>
