--- a/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
+++ b/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
@@ -48,19 +48,46 @@
           
           <!-- Modal -->
           <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="exampleModalLabel">Woman, Female, Leaf, and Face</h5>
+			
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
                 </div>
-                <div class="modal-body"> 
-					[placeholder for modal stats]
-			    </div>
-                <div class="modal-footer">
-					<a href="https://unsplash.com/photos/ZaM4FioEJ6c" target="_blank">Photo Source</a>
+                <div class="modal-body">
+					<p>Published on April 27, 2018</p>
+                  <div class="row">
+                    <div class="col-12 col-sm-3">
+                      <div class="card"> <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=1200&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
+                    </div>
+                    <div class="col-12 col-sm-9">
+                      <div class="row">
+                        <dl class="col-4">
+                          <dt>Views</dt>
+                          <dd><strong>61,575</strong></dd>
+                          <dd>+8,943 since last month</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Downloads</dt>
+                          <dd><strong>468</strong></dd>
+                          <dd>+65 since last month</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Likes</dt>
+                          <dd><strong>33</strong></dd>
+                          <dd>+4 since last month</dd>
+                        </dl>
+                        <dl class="col-4">
+                          <dt>Dimensions</dt>
+                          <dd>2760 × 3702</dd>
+                        </dl>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="modal-footer"> <a href="https://unsplash.com/photos/ZaM4FioEJ6c" target="_blank">Photo Source</a>
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  
                 </div>
               </div>
             </div>
