--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!doctype html>
 <html lang="en"><!-- InstanceBegin template="/Templates/master-template.dwt" codeOutsideHTMLIsLocked="false" -->
   <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <!-- InstanceBeginEditable name="doctitle" -->
     <title>Unsplash Photographer Spotlight</title>
     <!-- InstanceEndEditable -->
-  <!-- InstanceBeginEditable name="head" -->
+    <!-- InstanceBeginEditable name="head" -->
     <!-- InstanceEndEditable -->
   </head>
   <body>
-    <div class="container">
-      <h1>Unsplash Photographer Spotlight</h1>
-      <p>{about me}</p>
-      <!-- InstanceBeginEditable name="master-content" -->
+	 
+	 <div class="container">
+		 <h1>Unsplash Photographer Spotlight</h1>
+    <!-- InstanceBeginEditable name="master-content" -->
         <div class="row">
 <div class="col-9 col-md-10 col-lg-11">
-          <p>[my mission statement.]</p>
+         
             </div>
         </div>
+		 <div class="row">
+		 <div class="col-3 col-md-2 col-lg-1">
+			 <img src="images/courtney-mullen.jpg" alt="Courtney Mullen" class="img-fluid rounded-circle"/> </div>
+			 <div class="col-9 col-md-10 col-lg-11">
+				 <p>Welcome to my Unsplash Photographer Spotlight. Below are six photographers that have inspired me with their work. I've selected 10 photos from each photographer's Unsplash portfolio and presented some commentary. Click on any photographer to start.</p>
+			 </div>
+		 </div>
       <div class="card-deck">
 	<div class="card"><img class="card-img-top" src="https://images.unsplash.com/profile-1516856058581-22eb42423648?auto=format&fit=crop&w=400&h=225&q=60&crop=faces">
 	  
@@ -81,12 +88,13 @@
     </div>
   </div>
 </div>
-              <!-- InstanceEndEditable --><!-- Optional JavaScript -->
-      <p>{footer}</p>
-    </div>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS --> 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> 
+              <!-- InstanceEndEditable -->
+		 <p>[Footer]</p>
+	</div>
+		  <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   </body>
 <!-- InstanceEnd --></html>
