--- a/philipe-cavalcante/index.html
+++ b/philipe-cavalcante/index.html
@@ -63,7 +63,17 @@
         </div>
       </div>
       
-		 <p>[Footer]</p>
+		 <div class="row">
+		 <div class="col-12 col-sm-6">
+			 Made with [love] and [coffee] by Courtney Mullen
+			 </div>
+			 <div class="col-12 col-sm-6">
+			 Connect with me:
+				 <a href="https://www.twitter.com/courtneymullen_" target="_blank">Twitter</a>
+				 <a href="https://www.instagram.com/courtneymullen19" target="_blank">Instagram</a>
+				 <a href="https://www.linkedin.com/in/courtney-mullen-764875172/" target="_blank">LinkedIn</a>
+			 </div>
+		 </div>
 	</div>
 		  <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
