added 2nd detail photographer

--- a/philipe-cavalcante/index.html
+++ b/philipe-cavalcante/index.html
@@ -49,7 +49,7 @@
           <p>Philipe was the first photographer that I used for the Unsplash Class Project of my Webdesign Class. Ever since then, he has always been included as a featured photographer.</p>
 			 <div class="card-columns">
         <div class="card"> <a href="photographs/woman-female-leaf-and-face.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=300&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1539910026384-9824f87bfe9b?auto=format&w=300&q=60" alt="The Explorer's Curiousity"> </div>
+        <div class="card"> <a href="photographs/the-explorer's-curiosity - Copy.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539910026384-9824f87bfe9b?auto=format&w=300&q=60" alt="The Explorer's Curiousity"></a> </div>
         <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1530052283113-e52d37c08509?auto=format&w=300&q=60" alt="Afternoon Coffee Photo"> </div>
         <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1521493521559-59b6d17ebe71?auto=format&w=500&q=60" alt="Path of the Intimate Photo"> </div>
         <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1516938009988-c0066a8a34f1?auto=format&w=500&q=60" alt="Photo of Rio de Janeiro"> </div>
