added al 10 photographers photo detail page

--- a/philipe-cavalcante/index.html
+++ b/philipe-cavalcante/index.html
@@ -49,15 +49,15 @@
           <p>Philipe was the first photographer that I used for the Unsplash Class Project of my Webdesign Class. Ever since then, he has always been included as a featured photographer.</p>
 			 <div class="card-columns">
         <div class="card"> <a href="photographs/woman-female-leaf-and-face.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=300&q=60" alt="Woman, Female, Leaf, and Face."></a> </div>
-        <div class="card"> <a href="photographs/the-explorer's-curiosity - Copy.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539910026384-9824f87bfe9b?auto=format&w=300&q=60" alt="The Explorer's Curiousity"></a> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1530052283113-e52d37c08509?auto=format&w=300&q=60" alt="Afternoon Coffee Photo"> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1521493521559-59b6d17ebe71?auto=format&w=500&q=60" alt="Path of the Intimate Photo"> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1516938009988-c0066a8a34f1?auto=format&w=500&q=60" alt="Photo of Rio de Janeiro"> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?auto=format&w=400&q=60" alt="Woman, Portrait, Sunglasses and Curly Hair HD photo"> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1520743067132-c02d375363d1?auto=format&w=500&q=60" alt="Popcorn in Old Recife"> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1538150940350-992189196d9d?auto=format&w=300&q=60" alt="Feeling Your Vibe Photo"> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1531251445707-1f000e1e87d0?auto=format&w=300&q=60" alt="Portrait, woman, happy and smile"> </div>
-        <div class="card"> <img class="card-img-top" src="https://images.unsplash.com/photo-1519670950738-ec93098c53bc?auto=format&w=500&q=60" alt="Proving New Airs Photo"> </div>
+        <div class="card"> <a href="photographs/the-explorer's-curiosity.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1539910026384-9824f87bfe9b?auto=format&w=300&q=60" alt="The Explorer's Curiousity"></a> </div>
+        <div class="card"> <a href="photographs/afternoon-coffee.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1530052283113-e52d37c08509?auto=format&w=300&q=60" alt="Afternoon Coffee Photo"></a> </div>
+        <div class="card"> <a href="photographs/path-of-the-intimate.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1521493521559-59b6d17ebe71?auto=format&w=500&q=60" alt="Path of the Intimate Photo"></a> </div>
+        <div class="card"> <a href="photographs/photo-of-rio-de-janeiro.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1516938009988-c0066a8a34f1?auto=format&w=500&q=60" alt="Photo of Rio de Janeiro"></a> </div>
+        <div class="card"> <a href="photographs/woman-portrait-sunglasses-and-curly-hair-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1517365830460-955ce3ccd263?auto=format&w=400&q=60" alt="Woman, Portrait, Sunglasses and Curly Hair HD photo"></a> </div>
+        <div class="card"> <a href="photographs/popcorn-in-old-recife.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1520743067132-c02d375363d1?auto=format&w=500&q=60" alt="Popcorn in Old Recife"></a> </div>
+        <div class="card"> <a href="photographs/feeling-your-vibe.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1538150940350-992189196d9d?auto=format&w=300&q=60" alt="Feeling Your Vibe Photo"></a> </div>
+        <div class="card"> <a href="photographs/portrait-woman-happy-and-smile.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1531251445707-1f000e1e87d0?auto=format&w=300&q=60" alt="Portrait, woman, happy and smile"></a> </div>
+        <div class="card"> <a href="photographs/proving-new-airs.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1519670950738-ec93098c53bc?auto=format&w=500&q=60" alt="Proving New Airs Photo"></a> </div>
       </div>
           <!-- InstanceEndEditable -->
         </div>
