--- a/philipe-cavalcante/photographs/photo-of-rio-de-janeiro.html
+++ b/philipe-cavalcante/photographs/photo-of-rio-de-janeiro.html
@@ -22,7 +22,7 @@
           <li class="breadcrumb-item active"><a href="../../index.html">Home</a></li>
           <!-- InstanceBeginEditable name="breadcrumb-trail" -->
           <li class="breadcrumb-item"> <a href="../index.html">Philipe Cavalcante</a></li>
-          <li class="breadcrumb-item active"> The Explorer's Curiousity </li>
+          <li class="breadcrumb-item active">Photo of Rio de Janeiro</li>
           <!-- InstanceEndEditable -->
         </ol>
       </nav>
@@ -50,31 +50,31 @@
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Woman, Female, Leaf, and Face</h5>
+                  <h5 class="modal-title" id="exampleModalLabel">Photo of Rio de Janeiro</h5>
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"> <span aria-hidden="true">&times;</span> </button>
                 </div>
                 <div class="modal-body">
-                  <p>Published on April 27, 2018</p>
+                  <p>Published on January 26, 2018</p>
                   <div class="row">
                     <div class="col-12 col-sm-3">
-                      <div class="card"> <a href="Woman, Female, Leaf, and Face"><img class="card-img-top" src="https://images.unsplash.com/photo-1524788038240-5fa05b5ee256?auto=format&w=1200&q=60" alt="The Explorer's Curiousty"></a> </div>
+                      <div class="card"> <a href="Photo of Rio de Janeiro"><img class="card-img-top" src="https://images.unsplash.com/photo-1516938009988-c0066a8a34f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80" alt="Photo of Rio de Janeiro"></a> </div>
                     </div>
                     <div class="col-12 col-sm-9">
                       <div class="row">
                         <dl class="col-4">
                           <dt>Views</dt>
-                          <dd><strong>1,243</strong></dd>
-                          <dd>+743 since last month</dd>
+                          <dd><strong>90,344</strong></dd>
+                          <dd>+22,708 since last month</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Downloads</dt>
-                          <dd><strong>34</strong></dd>
-                          <dd>+22 since last month</dd>
+                          <dd><strong>457</strong></dd>
+                          <dd>+80 since last month</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Likes</dt>
-                          <dd><strong>1</strong></dd>
-                          <dd>+1 since last month</dd>
+                          <dd><strong>12</strong></dd>
+                          <dd>0 since last month</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Camera Make</dt>
@@ -84,42 +84,39 @@
                           <dt>Camera Model</dt>
                           <dd><strong>SLT-A37</strong></dd>
                         </dl>
-                        </dl>
                         <dl class="col-4">
                           <dt>Focal Legnth</dt>
-                          <dd><strong>50.0mm</strong></dd>
+                          <dd><strong>18.0mm</strong></dd>
                         </dl>
                         <dl class="col-4">
                           <dt>Apeture</dt>
-                          <dd>ƒ/4.5</dd>
+                          <dd>ƒ/5.0</dd>
                         </dl>
                         <dl class="col-4">
-                          <dt>Shutter Speed/dt>
-                          <dd>1/125s</dd>
-                        </dl>
+							<dt>Shutter Speed</dt>
+                          <dd>1/500s</dd>
                         </dl>
                         <dl class="col-4">
                           <dt>ISO</dt>
-                          <dd><strong>200</strong></dd>
-                        </dl>
-                        </dl>
+                          <dd><strong>100</strong></dd>
+						  </dl>
                         <dl class="col-4">
                           <dt>Dimensions</dt>
-                          <dd><strong>2760 × 4912</strong></dd>
+                          <dd><strong>4912 × 3264</strong></dd>
                         </dl>
                       </div>
                     </div>
                   </div>
                 </div>
-                <div class="modal-footer"> <a href="https://unsplash.com/photos/ZaM4FioEJ6c" target="_blank">Photo Source</a>
+                <div class="modal-footer"> <a href="https://unsplash.com/photos/Kniw5HcqeII" target="_blank">Photo Source</a>
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
               </div>
             </div>
           </div>
-          <h2>The Explorer's Curiousity</h2>
-          <p>I really like this photo of this woman walking through two doors.</p>
-          <div class="card"> <a href="The Explorer's Curiousity"><img class="card-img-top" src="https://images.unsplash.com/photo-1539910026384-9824f87bfe9b?auto=format&w=1200&q=60" alt="The Explorer's Curiousity."></a> </div>
+          <h2>Photo of Rio de Janeiro</h2>
+          <p>This is a beautiful photo of a city with vibrant colors.</p>
+          <div class="card"> <a href="Photo of Rio de Janeiro"><img class="card-img-top" src="https://images.unsplash.com/photo-1516938009988-c0066a8a34f1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1353&q=80" alt="Photo of Rio de Janeiro"></a> </div>
           <!-- InstanceEndEditable --> </div>
       </div>
       <div class="row">
