--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<div class="card-body">
 		<h2 class="card-title">Toa Heftiba</h2>
       <p class="card-text">Product | Food | Lifestyle Photographer • Graphic Designer • Social Media Specialist Instagram: @heftiba</p>
-            <a href="Protecting the Arctic/index.html" target="_blank">Photo Gallery</a>
+            <a href="Toa Heftiba/index.html" target="_blank">Photo Gallery</a>
 		</div>
 	</div>
 	
@@ -54,7 +54,7 @@
 		<div class="card-body">
 		<h2 class="card-title">Sarah Sharp</h2>
       <p class="card-text">@simplysgphotography ✗ born n raised country girl ✗ sunsets & coffee shops ✗ living to glorify my creator and savior, Jesus Christ.</p>
-            <a href="#">Photo Gallery</a>
+            <a href="Sarah Sharp/index.html">Photo Gallery</a>
 		</div>
 	</div>
 </div>
