--- a/Toa Heftiba/index.html
+++ b/Toa Heftiba/index.html
@@ -1,10 +1,82 @@
 <!doctype html>
-<html>
+<html lang="en"><!-- InstanceBegin template="/Templates/toa-heftiba.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
-<meta charset="UTF-8">
-<title>Untitled Document</title>
-</head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<body>
-</body>
-</html>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <!-- InstanceBeginEditable name="doctitle" -->
+    <title>Unsplash - Toa Heftiba</title>
+    <!-- InstanceEndEditable -->
+  <!-- InstanceBeginEditable name="head" -->
+<!-- InstanceEndEditable -->
+  </head>
+  <body>
+	 
+	 <div class="container">
+		 <h1>Unsplash Photographer Spotlight</h1>
+<nav>
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item active"><a href="../index.html">Home</a></li>
+      <!-- InstanceBeginEditable name="breadcrumb-trail" -->
+      <li class="breadcrumb-item active"> Toa Heftiba </li>
+      <li class="breadcrumb-item active"> Example Photo </li>
+      <!-- InstanceEndEditable -->
+    </ol>
+    </nav>
+      <div class="row">
+        <div class="col-12 col-sm-6 col-md-3">
+          <div class="card">
+            <img class="card-img-top" 
+				 src="https://images.unsplash.com/profile-1510932839800-fa28425a0bc5?auto=format&fit=crop&w=400&h=225&q=60&crop=faces" alt="Philipe Cavalcante">
+            <div class="card-body">
+              <h2> Toa Heftiba</h2>
+              <p>Product | Food | Lifestyle Photographer • Graphic Designer • Social Media Specialist</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"> <a href="http://www.heftiba.co.uk/?utm_medium=referral&utm_source=unsplash" target="_blank">Website</a></li>
+				<li class="list-group-item"> <a href="https://www.facebook.com/Heftiba-664976630288515/?fref=ts" target="_blank"> Facebook</a></li>
+              <li class="list-group-item"> <a href="https://instagram.com/heftiba/" target="_blank"> Instagram</a></li>
+              <li class="list-group-item"> <a href="http://www.heftiba.co.uk/twitter.com/ToaHeftiba" target="_blank"> Twitter </a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-12 col sm-6 col-md-9">
+          <!-- InstanceBeginEditable name="atanas-malamov-content" -->
+          <p>Toa was the second photographer that I used for the Unsplash Class Project of my Webdesign Class. Ever since then, she has always been included as a featured photographer.</p>
+			 <div class="card-columns">
+        <div class="card"> <a href="photographs/woman-female-leaf-and-face.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544040376-4274f2ac03b5?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Coffee and Feet"></a> </div>
+        <div class="card"> <a href="photographs/the-explorer's-curiosity.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544184833-0411cd796cbc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Up Above"></a> </div>
+        <div class="card"> <a href="photographs/afternoon-coffee.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039477-7b254c0ace1d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Winter"></a> </div>
+        <div class="card"> <a href="photographs/path-of-the-intimate.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039979-2383f128bf04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Christmas"></a> </div>
+        <div class="card"> <a href="photographs/photo-of-rio-de-janeiro.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039075-e3078bb265de?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Friends"></a> </div>
+        <div class="card"> <a href="photographs/woman-portrait-sunglasses-and-curly-hair-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544038626-8fcbf944c1c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Coffee"></a> </div>
+        <div class="card"> <a href="photographs/popcorn-in-old-recife.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544038385-ad7be4962d20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Plants"></a> </div>
+        <div class="card"> <a href="photographs/feeling-your-vibe.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544037118-0e4435910938?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Abstract Art"></a> </div>
+        <div class="card"> <a href="photographs/portrait-woman-happy-and-smile.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544037834-8677ab4bee37?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="More plants"></a> </div>
+        <div class="card"> <a href="photographs/proving-new-airs.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544019861-4c7444a21d20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Home"></a> </div>
+      </div>
+          <!-- InstanceEndEditable -->
+        </div>
+      </div>
+      <div class="row">
+	    <div class="col-12 col-sm-6">
+			 Made with [love] and [coffee] by Courtney Mullen
+			 </div>
+			 <div class="col-12 col-sm-6">
+			 Connect with me:
+				 <a href="https://www.twitter.com/courtneymullen_" target="_blank">Twitter</a>
+				 <a href="https://www.instagram.com/courtneymullen19" target="_blank">Instagram</a>
+				 <a href="https://www.linkedin.com/in/courtney-mullen-764875172/" target="_blank">LinkedIn</a>
+			 </div>
+		 </div>
+	</div>
+		  <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
+<!-- InstanceEnd --></html>
