added 10 photos for alex

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="card-body">
       <h2 class="card-title">Alexandru Acea</h2>
       <p class="card-text">Make sure to follow me on instagram @alexacea Wanna edit like me? Get my preset pack from alexacea.com/shop</p>
-        <a href="#">Photo Gallery</a>
+        <a href="Alexandru Acea/index.html">Photo Gallery</a>
 
     </div>
   </div>
