added all sarahs' 10 photos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		<div class="card-body">
 		<h2 class="card-title">Sarah Sharp</h2>
       <p class="card-text">@simplysgphotography ✗ born n raised country girl ✗ sunsets & coffee shops ✗ living to glorify my creator and savior, Jesus Christ.</p>
-            <a href="#">Photo Gallery</a>
+            <a href="Sarah Sharp/index.html">Photo Gallery</a>
 		</div>
 	</div>
 </div>
