added mahdis 10 photos

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="card-body">
       <h2 class="card-title">Devin Avery</h2>
       <p class="card-text">Photographer based in Los Angeles, as well as Sacramento, Jesus first, then coffee, which leads to photos of below...</p>
-        <a href="#">Photo Gallery</a>
+        <a href="Devin Avery/index.html">Photo Gallery</a>
     </div>
   </div>
   <div class="card">
@@ -83,7 +83,7 @@
       <p class="card-text">NYC-based Visual designer.
 
 </p>
-        <a href="#">Photo Gallery</a>
+        <a href="Mahdis Mousavi/index.html">Photo Gallery</a>
         
     </div>
   </div>
