added the detail pages to all 10 photos for Toa

--- a/Toa Heftiba/index.html
+++ b/Toa Heftiba/index.html
@@ -22,7 +22,6 @@
       <li class="breadcrumb-item active"><a href="../index.html">Home</a></li>
       <!-- InstanceBeginEditable name="breadcrumb-trail" -->
       <li class="breadcrumb-item active"> Toa Heftiba </li>
-      <li class="breadcrumb-item active"> Example Photo </li>
       <!-- InstanceEndEditable -->
     </ol>
     </nav>
@@ -47,16 +46,16 @@
           <!-- InstanceBeginEditable name="atanas-malamov-content" -->
           <p>Toa was the second photographer that I used for the Unsplash Class Project of my Webdesign Class. Ever since then, she has always been included as a featured photographer.</p>
 			 <div class="card-columns">
-        <div class="card"> <a href="photographs/woman-female-leaf-and-face.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544040376-4274f2ac03b5?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Coffee and Feet"></a> </div>
-        <div class="card"> <a href="photographs/the-explorer's-curiosity.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544184833-0411cd796cbc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Up Above"></a> </div>
-        <div class="card"> <a href="photographs/afternoon-coffee.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039477-7b254c0ace1d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Winter"></a> </div>
-        <div class="card"> <a href="photographs/path-of-the-intimate.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039979-2383f128bf04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Christmas"></a> </div>
-        <div class="card"> <a href="photographs/photo-of-rio-de-janeiro.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039075-e3078bb265de?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Friends"></a> </div>
-        <div class="card"> <a href="photographs/woman-portrait-sunglasses-and-curly-hair-photo.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544038626-8fcbf944c1c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Coffee"></a> </div>
-        <div class="card"> <a href="photographs/popcorn-in-old-recife.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544038385-ad7be4962d20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Plants"></a> </div>
-        <div class="card"> <a href="photographs/feeling-your-vibe.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544037118-0e4435910938?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Abstract Art"></a> </div>
-        <div class="card"> <a href="photographs/portrait-woman-happy-and-smile.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544037834-8677ab4bee37?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="More plants"></a> </div>
-        <div class="card"> <a href="photographs/proving-new-airs.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544019861-4c7444a21d20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Home"></a> </div>
+        <div class="card"> <a href="photographs/coffee-and-feet.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544040376-4274f2ac03b5?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Coffee and Feet"></a> </div>
+        <div class="card"> <a href="photographs/up-above.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544184833-0411cd796cbc?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Up Above"></a> </div>
+        <div class="card"> <a href="photographs/winter.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039477-7b254c0ace1d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Winter"></a> </div>
+        <div class="card"> <a href="photographs/christmas.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039979-2383f128bf04?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Christmas"></a> </div>
+        <div class="card"> <a href="photographs/friends.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544039075-e3078bb265de?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Friends"></a> </div>
+        <div class="card"> <a href="photographs/coffee.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544038626-8fcbf944c1c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="Coffee"></a> </div>
+        <div class="card"> <a href="photographs/plants.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544038385-ad7be4962d20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Plants"></a> </div>
+        <div class="card"> <a href="photographs/abstract-art.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544037118-0e4435910938?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Abstract Art"></a> </div>
+        <div class="card"> <a href="photographs/more-plants.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544037834-8677ab4bee37?ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80" alt="More plants"></a> </div>
+        <div class="card"> <a href="photographs/home.html"><img class="card-img-top" src="https://images.unsplash.com/photo-1544019861-4c7444a21d20?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80" alt="Home"></a> </div>
       </div>
           <!-- InstanceEndEditable -->
         </div>
