added CSS to all Pages

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <title>Unsplash Photographer Spotlight</title>
     <!-- InstanceEndEditable -->
     <!-- InstanceBeginEditable name="head" -->
+    <style type="text/css">
+    @import url("philipe-cavalcante/photographs/afternoon-coffee.html.css");
+    </style>
+    <link href="css/site.css" rel="stylesheet" type="text/css">
     <!-- InstanceEndEditable -->
   </head>
   <body>
