--- a/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
+++ b/philipe-cavalcante/photographs/woman-female-leaf-and-face.html
@@ -12,6 +12,7 @@
   <!-- InstanceEndEditable -->
     
   <!-- InstanceBeginEditable name="head" -->
+  <link href="../../css/site.css" rel="stylesheet" type="text/css">
   <!-- InstanceEndEditable -->
   
   </head>
