--- a/Toa Heftiba/index.html
+++ b/Toa Heftiba/index.html
@@ -11,6 +11,7 @@
     <title>Unsplash - Toa Heftiba</title>
     <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" -->
+  <link href="../css/site.css" rel="stylesheet" type="text/css">
 <!-- InstanceEndEditable -->
   </head>
   <body>
