--- a/philipe-cavalcante/photographs/path-of-the-intimate.html
+++ b/philipe-cavalcante/photographs/path-of-the-intimate.html
@@ -12,6 +12,7 @@
   <title>Unsplash - Philipe Cavalcante</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" -->
+  <link href="../../css/site.css" rel="stylesheet" type="text/css">
   <!-- InstanceEndEditable -->
   </head>
   <body>
