--- a/philipe-cavalcante/photographs/portrait-woman-happy-and-smile.html
+++ b/philipe-cavalcante/photographs/portrait-woman-happy-and-smile.html
@@ -12,6 +12,7 @@
   <title>Unsplash - Philipe Cavalcante</title>
   <!-- InstanceEndEditable -->
   <!-- InstanceBeginEditable name="head" -->
+  <link href="../../css/site.css" rel="stylesheet" type="text/css">
   <!-- InstanceEndEditable -->
   </head>
   <body>
